hphp/test/zend/good/Zend/tests/str_offset_002.php.expectf

Fatal error: Uncaught exception 'InvalidArgumentException' with message 'Parameters marked inout must be contained in locals, vecs, dicts, keysets, and arrays' in %s/str_offset_002.php:3
Stack trace:
#0 (): main()
#1 {main}
